--- a/admin/views/login.html
+++ b/admin/views/login.html
@@ -1,45 +1,14 @@
-<!-- hread -->
+<!-- header-->
 {% include 'common/header.html' %}
 
-    <style type="text/css">
-      body {
-        padding-top: 40px;
-        padding-bottom: 40px;
-        background-color: #f5f5f5;
-      }
-
-      .form-signin {
-        max-width: 300px;
-        padding: 19px 29px 29px;
-        margin: 0 auto 20px;
-        background-color: #fff;
-        border: 1px solid #e5e5e5;
-        -webkit-border-radius: 5px;
-           -moz-border-radius: 5px;
-                border-radius: 5px;
-        -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-           -moz-box-shadow: 0 1px 2px rgba(0,0,0,.05);
-                box-shadow: 0 1px 2px rgba(0,0,0,.05);
-      }
-      .form-signin .form-signin-heading,
-      .form-signin .checkbox {
-        margin-bottom: 10px;
-      }
-      .form-signin input[type="text"],
-      .form-signin input[type="password"] {
-        font-size: 16px;
-        height: auto;
-        margin-bottom: 15px;
-        padding: 7px 9px;
-      }
-    </style>
+<link href="{{staticfile}}/css/signin.css" rel="stylesheet">
     <div class="container">
 
       <form class="form-signin" action="#" method="post">
-        <h2 class="form-signin-heading">请登陆</h2>
-        <input type="text" name="email" class="input-block-level" placeholder="邮箱">
-        <input type="password" name="password" class="input-block-level" placeholder="密码">
-        <button class="btn btn-large btn-primary" type="submit">Sign in</button>
+        <h2 class="form-signin-heading">请登录</h2>
+        <input type="text" name="email" class="form-control" placeholder="邮箱">
+        <input type="password" name="password" class="form-control" placeholder="密码">
+        <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
 
     </div> <!-- /container -->
